--- a/part-3/hotel.html
+++ b/part-3/hotel.html
@@ -25,46 +25,80 @@
             <td>2B</td>
             <td>4</td>
             <td>$59.99</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
           <tr id="room2A">
             <td>2A</td>
             <td>4</td>
             <td>$59.99</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
           <tr id="room3A">
             <td>3A</td>
             <td>2</td>
             <td>$45.00</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
           <tr id="room3B">
             <td>3B</td>
             <td>2</td>
             <td>$45.00</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
           <tr id="room3C">
             <td>3C</td>
             <td>3</td>
             <td>$52.64</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
           <tr id="room4A">
             <td>4A</td>
             <td>4</td>
             <td>$59.99</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
           <tr id="room4B">
             <td>4B</td>
             <td>4</td>
             <td>$59.99</td>
-            <td><button>Book</button></td>
+            <td><button class="book">Book</button></td>
           </tr>
         </tbody>
       </table>
+    </div>
+
+    <div id="booking" class="modal">
+      <div class="modal-content">
+        <span class="close">X</span>
+          <h1>BOOKING</h1>
+            <ul id="list" class="content">
+              <li class="flex flex-row-between"><span id="roomNum"></span><span id="pricePerNight"></span></li>
+              <li class="flex flex-row-between">Check In
+                <form>
+                  <input type="date" name="checkIn">
+                </form>
+              </li>
+              <li class="flex flex-row-between">Nights
+                <form action="#">
+                  <select name="quantity" id="quantity">
+                    <option value=1>1</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5</option>
+                    <option value=6>6</option>
+                    <option value=7>7</option>
+                    <option value=8>8</option>
+                    <option value=9>9</option>
+                    <option value=10>10</option>
+                  </select>
+                </form>
+              </li>
+            <li class="flex flex-row-between">Total<span id="total">$ 0</span>
+              <button>Confirm</button>
+            </li>
+          </ul>
+        </div>
     </div>
   </body>
   <script src="hotel.js" charset="utf-8"></script>
